deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sinatra
  labels:
    app.kubernetes.io/name: sinatra
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sinatra
  replicas: 2
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sinatra
    spec:
      containers:
      - name: sinatra
        image: public.ecr.aws/e6n9d7h8/sinatra-example:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 4567
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:  
            path: /
            port: 4567
          initialDelaySeconds: 10
          periodSeconds: 10
          timeoutSeconds: 2
        volumeMounts:
        - name: config
          mountPath: "/config"
          readOnly: true
      volumes:
      # You set volumes at the Pod level, then mount them into containers inside that Pod
      - name: config
        configMap:
          # Provide the name of the ConfigMap you want to mount.
          name: configmap
          # An array of keys from the ConfigMap to create as files
          items:
          - key: "game.properties"
            path: "game.properties"
          - key: "user-interface.properties"
            path: "user-interface.properties"
