service-clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: service-clusterip
spec:
  selector:
     app.kubernetes.io/name: sinatra
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 4567
