service-externalname.yml
apiVersion: v1
kind: Service
metadata:
  name: service-apache
spec:
  type: ExternalName
  externalName: ec2-3-91-231-243.compute-1.amazonaws.com
